fix(nav): z-index issue with dropdown under content

--- a/angular-ngrx-scss/src/app/home/nav-bar/nav-bar.component.scss
+++ b/angular-ngrx-scss/src/app/home/nav-bar/nav-bar.component.scss
@@ -47,6 +47,7 @@ img {
     margin-top: 0.5rem;
     padding: 0.25rem 0;
     transform-origin: top right;
+    z-index: 10;
 
     a {
       color: variables.$gray900;
