--- a/angular-ngrx-scss/src/app/home/profile/profile.component.scss
+++ b/angular-ngrx-scss/src/app/home/profile/profile.component.scss
@@ -4,7 +4,7 @@ main {
   .profile-header {
     position: sticky;
     top: 0;
-    z-index: 10;
+    z-index: 5;
     background-color: white;
     border-bottom: 1px solid rgb(229, 231, 235, 1);
   }
